--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "React Portfolio",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --inline --mode development --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "David Izosimov",
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0"
+  }
 }
