--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "David Izosimov",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1"
@@ -21,10 +22,12 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "eslint": "^4.18.2",
+    "js-yaml": "^3.13.1",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.1.11"
   }
 }
