--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-undraw-illustrations": "^2.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
@@ -22,7 +23,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "js-yaml": "^3.13.1",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
