--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,10 +1,20 @@
 [
     {
         "id": 1,
-        "name": "My First Website"
+        "name": "My First Website",
+        "image": "http://www.4president.us/websites/2000/2000w/gore2000home.gif",
+            "description": "This was my first project. MORE DESCRIPTION"
     },
     {
         "id": 2,
-        "name": "FizzBuzz"
+        "name": "UI Design",
+        "image": "https://images.unsplash.com/photo-1522542550221-31fd19575a2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
+            "description": "My second project. MORE DESCRIPTION"
+    },
+    {
+        "id": 3,
+        "name": "Third Project",
+        "image": "http://www.4president.us/websites/2000/2000w/gore2000home.gif",
+            "description":"My third project. MORE DESCRIPTION"
     }
 ]
